# localGPT-Vision

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
models/: indexer.py  model_loader.py  responder.py  retriever.py
static/css/: style.css  styles.css
static/js/: script.js
templates/: base.html  chat.html
